--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <nav>
             <div class="logo">
-                <h1>RESTAURANT</h1>
+                <h1>FOODIE</h1>
             </div>
             <ul class="desktop">
                 <li><a href="#">Home</a></li>
