--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="./images/cart.png" alt="">
                 <button class="booking">Booking Now</button>
             </ul>
-            <button class="toggle" onclick="hamburger()">≡</button>
+            <button class="toggle" onclick="hamburger()">☰</button>
         </nav>
 
         <ul class="mobileNav">
