I edit the footer

--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
 
  <!-- ------------FOOTER Section------------- -->
     <footer>
-        <div class="footer-left">
+        <div class="foot">
+                    <div class="footer-left">
                 <div class="footer-logo">
                     <h1>FOODIE</h1>
                 </div>
@@ -228,7 +229,15 @@
                 <li>Privacy Policy</li>
             </ul>
         </div>
+        </div>
+        <div className="reserved">
+            <p>
+            © 2022 copyright by aDevMister. all right reserved.
+            </p>
+        </div>
+          
     </footer>
+    
 
 
 
