updating the footer

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
         <div className="reserved">
             <p>
-            © 2022 copyright by aDevMister. all right reserved.
+            © 2022 Copyright By aDevMister. All Right Reserved.
             </p>
         </div>
           
